# sayhello

./: .gitignore  README.md  __init__.py  macroflow_tool.py  pyproject.toml  sayhello.py  tool.mk
src/sayhello/: __init__.py  cli.py  main.py
tests/: __init__.py  test_sayhello.py
