[project]
name = "sayhello"
version = "1.0.0"
description = "A simple greeting tool for MacroFlow integration demo"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "MacroFlow Team", email = "macroflow@example.com" }
]
license = { text = "MIT" }

dependencies = []

[project.scripts]
sayhello = "sayhello.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sayhello"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

